...
        return 'Modifier';
      case actionValidate:
        return 'Valider';
      case actionExport:
        return 'Exporter';
      case actionDelete:
        return 'Supprimer';
      default:
        return 'Action inconnue';
    }
  }

  static String getObjectDescription(String objectCode) {
...
