...
      appBar: AppBar(
        title: Text(
            '${widget.moduleInfo.module.complement?.configuration?.sitesGroup?.label ?? 'Groupe'}: ${widget.siteGroup.sitesGroupName ?? 'Détail du groupe'}'),
        actions: [
          if (canEdit)
            IconButton(
              key: const Key('edit-site-group-button'),
              icon: const Icon(Icons.edit),
              tooltip: 'Modifier le groupe de sites',
              onPressed: () {
                if (sitesGroupConfig != null) {
                  Navigator.push(
                    context,
...
                builder: (context) {
                  final siteConfig = module.complement?.configuration?.site;
                  final isEditable = _isSiteEditableOnField(siteConfig);
                  Widget? addButton;
                  if (isEditable) {
                    addButton = IconButton(
                      key: const Key('create-site-button'),
                      onPressed: () {
                        if (siteConfig != null) {
                          Navigator.push(
                            context,
                            MaterialPageRoute(
                              builder: (context) =>
...
