...
        Builder(
          builder: (context) {
            final isEditable = _isSiteGroupEditableOnField(sitesGroupConfig);
            Widget? addButton;
            if (isEditable) {
              addButton = IconButton(
                key: const Key('create-site-group-button'),
                onPressed: () {
                  if (sitesGroupConfig != null) {
                    Navigator.push(
                      context,
                      MaterialPageRoute(
                        builder: (context) => SiteGroupFormPage(
...
